# SEVRA

./: .env.example  .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements-train.txt
.github/workflows/: tests.yml
examples/: quickstart.py  replay.jsonl
scripts/: evaluate_gate.py  train_gate.py
src/sevra/: __init__.py  actions.py  cli.py  controller.py  gates.py  hub.py  metrics.py  schema.py
tests/: test_controller.py  test_gates.py  test_metrics.py  test_schema.py
