[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sevra"
version = "0.1.0"
description = "Selective Verification for Reasoning Allocation"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "Sajib Acharjee Dip"}]
keywords = [
  "adaptive inference",
  "language models",
  "reasoning",
  "selective verification",
  "test-time compute",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
train = [
  "accelerate>=1.6,<2",
  "bitsandbytes>=0.45,<1",
  "datasets>=3.5,<5",
  "numpy>=1.26,<3",
  "peft>=0.15,<1",
  "scikit-learn>=1.5,<2",
  "torch>=2.2",
  "transformers>=4.51,<5",
]
dev = [
  "ruff>=0.11,<1",
]

[project.scripts]
sevra-replay = "sevra.cli:main"

[project.urls]
Homepage = "https://github.com/Sajib-006/SEVRA"
Repository = "https://github.com/Sajib-006/SEVRA"
Demo = "https://huggingface.co/spaces/sevra-space/sevra-replay"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
